# Research-Suite

./: .git-blame-ignore-revs  .gitignore  MIGRATING.md  README.md  ReadME.md  architecture_analysis.md
merv/: .env.example  .gitignore  .mcp.codex.json  .mcp.json  AGENTS.md  GEMINI.md  README.md  gemini-extension.json  mcp.json  pyproject.toml  requirements.txt
merv/.claude-plugin/: plugin.json
merv/.codex-plugin/: plugin.json
merv/.cursor-plugin/: plugin.json
merv/agents/: experiment-attempt-review.md  experiment-design-review.md  project-reflection-review.md
merv/backend/: __init__.py  client_cli.py  config.py  env.py  observability.py  secret_tokens.py  ssh_keys.py  utils.py  version.py  workspace.py
merv/backend/artifacts/: resources.py  roles.py
merv/backend/composition/: __init__.py  brain_dirs.py  control_mode.py
merv/backend/control/: control_app.py  control_client.py  control_runtime.py  record_core.py  storage_quotas.py
merv/backend/dataplane/: __init__.py  experiment_folders.py  feed_images.py  repo_paths.py  resource_validation.py
merv/backend/domain/: __init__.py  artifacts.py  experiment_names.py  experiment_policy.py  feed_images.py  feed_policy.py  paths.py  reflection_artifacts.py  reflection_gates.py  reflection_policy.py  reflection_projection.py  review_gates.py  review_handoff.py  review_returns.py  review_snapshot.py  sandbox_paths.py  vocabulary.py  workflow_gates.py
merv/backend/execution/: __init__.py  bootstrap_tools.py  multiplexer.py  run_receipts.py  transcript_wire.py  usage_metrics.py  vm_bootstrap.py  vm_ssh.py
merv/backend/kernel/: env.py  version.py
merv/backend/mlflow/: config.py  exhibit.py  metrics.py  tracking.py
merv/backend/ports/: __init__.py  blob_quota_admission.py  mgmt_keys.py  object_store.py  quota_admission.py  reflection_writers.py  resource_records.py  workflow_readers.py
merv/backend/sandbox/: managed_mgmt_keys.py  mgmt_keys.py  sandbox_backend.py  sandbox_support.py
merv/backend/services/: __init__.py  association_targets.py  auth.py  claims.py  cleanup.py  experiments.py  feed_unfurl.py  graph_refs.py  identity.py  permissions.py  project_overview.py  projects.py  quotas.py  reflection_tools.py  reflections.py  review_gate.py  reviews.py  transcript_cache.py  workflow.py  workflow_views.py
merv/deploy/: .dockerignore  .env.example  Dockerfile  Dockerfile.mlflow  Procfile  README.md  docker-compose.yml  doctor.py
merv/docs/: AGENT_ANYWHERE.md  APPLICATION_ARCHITECTURE_MIGRATION.md  ARCHITECTURE.md  ARTIFACT_MODEL.md  AUTH.md  BACKEND_SECURITY_HARDENING_2026-07.md  CENTRALIZED_MLFLOW.md  CLIENTS.md  CONTROL_DATA_PLANE_SPLIT.md  CONTROL_PLANE_OPERATIONS.md  DEPLOY_NOTES_MERV_TRANSITION.md  HOSTED_CLIENT_QUICKSTART.md  MCP_SERVER_CONTRACT.md  MODULE_BOUNDARIES.md  RESOURCE_MODEL.md  RESTRUCTURE_DESHIM_INVENTORY.md  RESTRUCTURE_MAP.md  REVIEW_IDENTITY.md  SANDBOX_PROVIDERS.md  STARTUP_CHEATSHEET.md  STORAGE_MODEL.md  UI_API.md  WORKFLOW_AND_REVIEW.md
merv/mcp_server/: __init__.py  __main__.py  _tool_catalog.json  local_data_plane.py  project_links.py  proxy.py
merv/research_plugin_shared/: client_config.py  machine_dirs.py  project_dirs.py
merv/scripts/: _feed_demo_server.py  _live_lambda_smoke.py  _reflection_daemon.py  dev_http_reload.py  migrate_mlflow_namespace.py  regen_reviewer_agents.py  regen_tool_catalog.py  rp_call.py  smoke_modal_sandbox.py  verify_application_architecture.sh
merv/tests/: fakes.py  paths.py
research_plugin/: .env.example  .gitignore  .mcp.codex.json  .mcp.json  GEMINI.md  README.md  bugs.txt  gemini-extension.json  mcp.json  plugin_improvement_progress.md  pyproject.toml  requirements.txt  startup.txt
research_plugin/.claude-plugin/: plugin.json
research_plugin/.codex-plugin/: plugin.json
research_plugin/.cursor-plugin/: plugin.json
research_plugin/agents/: design-review.md  experiment-attempt-review.md  experiment-design-review.md  experiment-review.md  project-reflection-review.md  synthesis-review.md
research_plugin/backend/: __init__.py  admin_http.py  app.py  client_cli.py  config.py  contracts.py  control_app.py  control_client.py  control_runtime.py  daemon_loopback.py  daemon_marker.py  env.py  feed_contracts.py  feed_http.py  http_api.py  http_policy.py  http_server.py  import_tool.py  local_runtime.py  mcp_http.py  observability.py  project_router.py  sandbox_backend.py  sandbox_support.py  tool_facade.py  tool_handlers.py  utils.py  version.py  workspace.py
research_plugin/deploy/: .dockerignore  .env.example  Dockerfile  Procfile  README.md  docker-compose.yml  doctor.py
research_plugin/docs/: ARCHITECTURE.md  CENTRALIZED_MLFLOW.md  CLAUDE_FRONTEND_HANDOFF.md  CLIENTS.md  CLOUD_BACKEND_MIGRATION_PLAN.md  CONTROL_DATA_PLANE_SPLIT.md  CONTROL_PLANE_OPERATIONS.md  FRONTEND_REDESIGN_OBJECTIVES.md  HOSTED_CLIENT_QUICKSTART.md  MCP_SERVER_CONTRACT.md  MOBILE_PLAN.md  MODULE_BOUNDARIES.md  PROJECT_SYNTHESIS_PLAN.md  RESOURCE_MODEL.md  REVIEW_IDENTITY.md  STARTUP_CHEATSHEET.md  STORAGE_MODEL.md  UI_API.md  WORKFLOW_AND_REVIEW.md  adding notebooks.md  startup.txt
research_plugin/improvement_requests/: 2026-07-02_research_plugin_improvement_requests.md
research_plugin/mcp_server/: __init__.py  __main__.py  _tool_catalog.json  daemon_marker.py  local_data_plane.py  proxy.py  time_utils.py
research_plugin/research_plugin_shared/: client_config.py
research_plugin/scripts/: _feed_demo_server.py  _live_lambda_smoke.py  _reflection_daemon.py  dev_http_reload.py  smoke_modal_sandbox.py  smoke_ray_jobs.py
research_plugin/tests/: fakes.py  paths.py  test_activity.py  test_dev_http_reload.py  test_execution.py  test_experiment_slim.py  test_http_api.py  test_job_service.py  test_lambda_availability.py  test_local_shipping.py  test_modal_backend.py  test_modal_sandbox_backend.py  test_modal_sync.py  test_plugin_skills.py  test_proxy_mcp.py  test_resource_versions.py  test_router_restart.py  test_sandbox_service.py  test_ssh_rsync.py  test_store_migrations.py  test_submit_pipeline.py  test_workflow_gates.py  test_workflow_slim.py
(+972 files in other folders)
