[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "merv"
version = "0.0012"
description = "Lean research-state workflow with project-local MCP context, resources, reviews, and cloud SSH sandboxes."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "UNLICENSED" }
authors = [{ name = "RapidReview" }]
keywords = ["research", "ml", "mcp", "experiments"]
# Base deps are the common HTTP surface, needed only to run a brain. The stdio
# proxy runs on bare python3 with no installs: static imports are pinned by
# ProxyStdlibOnlyTest (tests/structure/test_plane_layout.py), and the lazy
# contracts import falls back to the checked-in mcp_server/_tool_catalog.json,
# kept fresh and driven pydantic-free by tests/surface/test_static_tool_catalog.py.
# Provider SDKs (Modal) and Postgres/object-store deps live in the extras.
dependencies = [
    "fastapi>=0.115,<1",
    "httpx>=0.27,<1",
    "pydantic>=2.8,<3",
    "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
# local = localhost-brain extras: the provider SDK and MLflow server. The
# agent-facing stdio proxy remains a separate process and needs no extra.
local = ["modal>=1.4,<2", "mlflow==2.18.0"]
# control = hosted-brain adapters: Postgres driver + object-store SDK.
# No provider SDK is required at module load (modal is lazily imported at one
# site); a control plane that provisions Modal still needs it, so include it.
# PyJWT verifies Supabase session tokens; lazily imported so the local
# preset (which shares the composition module) never needs it.
control = ["modal>=1.4,<2", "psycopg[binary]>=3.1,<4", "boto3>=1.34,<2", "PyJWT>=2.8,<3"]
[project.scripts]
merv-mcp = "mcp_server.__main__:main"
merv-http = "backend.transport.http_server:main"
merv-control = "backend.transport.http_server:control_main"
merv-client = "backend.client_cli:main"

[tool.setuptools.packages.find]
# Discover backend + mcp_server AND their subpackages (backend.services,
# backend.state, backend.execution.*, …). The old explicit two-package list
# shipped only the top-level dirs, so an installed wheel (the control image)
# could not import backend.services — the source-checkout tests never caught it
# because they run from a copytree, not the wheel. ``find`` keeps the wheel and
# the checkout in sync. research_state_ui has no __init__ and is excluded anyway.
include = ["backend*", "mcp_server*", "research_plugin_shared*"]
